# web-eid

./: .gitignore  .travis.yml  CMakeLists.txt  GNUmakefile  LICENSE  Makefile  NMakefile  README.md  VERSION.mk  appveyor.yml  hwcrypto-native.spec  make.bat  package.json  web-eid.pro  web-eid.spec  wix.template.in
.github/workflows/: build.yml
artwork/: README  license.rtf  mac.icns  mac_welcome_en.rtf  svg2png.py
cmake/: DeployQt.cmake
debian/: changelog  control  copyright  hwcrypto-native.links  hwcrypto-native.postinst  hwcrypto-native.postrm  install  rules  web-eid.links  web-eid.postinst  web-eid.postrm
dockerfiles/: Makefile  build.sh  prepare.sh
dockerfiles/hwcrypto-debian-testing-base/: Dockerfile
dockerfiles/hwcrypto-debian-testing-builder/: Dockerfile
dockerfiles/hwcrypto-fedora-25-base/: Dockerfile
dockerfiles/hwcrypto-fedora-25-builder/: Dockerfile
dockerfiles/hwcrypto-ubuntu-16.04-base/: Dockerfile
dockerfiles/hwcrypto-ubuntu-16.04-builder/: Dockerfile
dockerfiles/hwcrypto-ubuntu-16.10-base/: Dockerfile
dockerfiles/hwcrypto-ubuntu-16.10-builder/: Dockerfile
dockerfiles/hwcrypto-ubuntu-17.04-base/: Dockerfile
dockerfiles/hwcrypto-ubuntu-17.04-builder/: Dockerfile
dockerfiles/web-eid-debian-testing-builder/: Dockerfile
dockerfiles/web-eid-fedora-25-builder/: Dockerfile
dockerfiles/web-eid-fedora-26-builder/: Dockerfile
dockerfiles/web-eid-fedora-27-builder/: Dockerfile
dockerfiles/web-eid-ubuntu-16.04-builder/: Dockerfile
dockerfiles/web-eid-ubuntu-16.10-builder/: Dockerfile
dockerfiles/web-eid-ubuntu-17.04-builder/: Dockerfile
dockerfiles/web-eid-ubuntu-17.10-builder/: Dockerfile
host-linux/: GNUmakefile  chrome-host.cpp  chrome-token-signing.qrc  hwcrypto-native.pro  hwcrypto-native.qrc  org.hwcrypto.native.json
host-linux/ff/: org.hwcrypto.native.json
host-osx/: Info.plist  Makefile  PINDialog.mm  hwcrypto-native.dist.xml  license.rtf  org.hwcrypto.native.firefox.json  org.hwcrypto.native.json  welcome.rtf
host-osx/hwcrypto-native.xcodeproj/: project.pbxproj
host-osx/installer-scripts/: postinstall
host-qt/: .gitignore  GNUmakefile  Info.plist  authenticate.cpp  authenticate.h  chrome-host.cpp  hwcrypto-native.pro  hwcrypto-native.qrc  make.bat  qt_certselect.cpp  qt_certselect.h  qt_host.h  qt_input.h  qt_pcsc.h  qt_signer.cpp  qt_signer.h  sign.cpp  sign.h
host-qt/translations/: strings.qrc  strings_et.ts  strings_ru.ts
host-shared/: AtrFetcher.cpp  Common.h  Labels.cpp  Logger.cpp  PKCS11Path.cpp  modulemap.cpp  modulemap.h  pcsc.cpp  pcsc.h  pkcs11module.cpp  pkcs11module.h  util.h
host-test/: pipe-test.py  testconf.py
host-windows/: CngCapiSigner.cpp  CngCapiSigner.h  WinCertSelect.cpp  WinCertSelect.h  WinSigner.cpp  WinSigner.h  chrome-token-signing.cpp  chrome-token-signing.rc  chrome-token-signing.wxs  host-windows.sln  host-windows.vcxproj  host-windows.vcxproj.filters  hwcrypto-native.props  hwcrypto-native.rc  hwcrypto-native.wxs  org.hwcrypto.native.firefox.json  org.hwcrypto.native.json
keys/: README.txt  fullchain.crt.pem  localhost.crt  localhost.crt.pem  localhost.key  localhost.key.pem  obf.py
linux/: .gitignore  Makefile  com.web-eid.policy.json  org.hwcrypto.native.firefox.json  org.hwcrypto.native.json  web-eid-service.desktop  web-eid.desktop
linux/firefox/: org.hwcrypto.native.json
macos/: .gitignore  Makefile  dmg.json  hwcrypto-native.dist.xml  org.hwcrypto.native.firefox.json  org.hwcrypto.native.json  uninstall.sh  uninstaller.applescript  web-eid.dist.xml  web-eid.entitlements
macos/installer-scripts/: chrome-policy.plist  postinstall
src/: .gitignore  Common.h  GNUmakefile  Info.plist  Logger.cpp  Logger.h  app.pro  autostart.cpp  autostart.h  cert.pem  context.cpp  context.h  debuglog.cpp  hwcrypto-native.pro  internal.h  main.cpp  main.h  make.bat  modulemap.cpp  modulemap.h  oracle.cpp  oracle.h  pcsc.cpp  pcsc.h  pkcs11module.cpp  pkcs11module.h  qpcsc.cpp  qpcsc.h  qpki.cpp  qpki.h  qwincrypt.cpp  qwincrypt.h  src.pro  util.h  web-eid.pro  web-eid.qrc  webextension.cpp  webextension.h
src/dialogs/: about.h  betterdialog.h  debug.h  insert_card.h  macosxui.mm  pin.h  reader_in_use.h  select_cert.h  select_reader.h  winop.h
src/login/: Info.plist  login.cpp  login.pro
src/nm-bridge/: bridge.pro  make.bat  nm-bridge.cpp  nm-bridge.h  nm-bridge.pro
src/nm-proxy/: nm-proxy.cpp  nm-proxy.h  nm-proxy.pro
src/qt/: authenticate.cpp  authenticate.h  autostart.cpp  autostart.h  chrome-host.cpp  context.cpp  context.h  hwcrypto-native.qrc  internal.h  main.cpp  main.h  qpcsc.cpp  qpcsc.h  qpki.cpp  qpki.h  qt_certselect.h  qt_host.h  qt_input.h  qt_pcsc.cpp  qt_pcsc.h  qt_pki.cpp  qt_pki.h  qt_signer.h  qwincrypt.h  server.cpp  server.h  sign.h  (+1 more)
tests/: auth-test.py  auth.py  chrome.py  eesti.py  host-sample.py  longrunning-test.py  origin.py  pcsc.py  pipe-test.py  sign-test.py  sign.py  stateless-test.py  testconf.py
windows/: hwcrypto-native.nsi  hwcrypto-native.wxs  org.hwcrypto.native.firefox.json  org.hwcrypto.native.json  web-eid.nsi  web-eid.wxs
(+11 files in other folders)
